Added artist detail section with avatar,name, suscribers and more details

--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
             <img id="thumbs_up" src="images/thumbs_up.jpg">
             <img id="thumbs_down" src="images/thumbs_down.jpg">
         </section>
-        <section>
+        <section id="artist_detail">
+            <img id ="artist_avatar" src ="#">
+            <p id ="artist_name">Eminem Music</p>
+            <p id ="suscribers">39.8M suscribers</p>
+            <p id="detail_info">
+              iTunes: <a href ="http://smarturl.it/WithoutMe" target="blank"> http://smarturl.it/WithoutMe </a>  <br>
+              Amazon: <a href ="http://smarturl.it/WithoutMeAmz" target="blank"> http://smarturl.it/WithoutMeAmz</a> <br>
+              Google Play: <a href ="http://smarturl.it/WithoutMeGP" target="blank">http://smarturl.it/WithoutMeGP</a> <br> 
+            </p>
+            <p id="show_more" class="actions" >SHOW MORE</p>
 
         </section>
         <section>
