--- a/index.html
+++ b/index.html
@@ -67,6 +67,31 @@
           </section>
         </section>
         <aside class="recom">
+          <section id = " ad_banner">
+            <img src="images/microverse_ad.jpeg" alt="microverse ad">
+          </section>
+          <section id="rel_vid_control">
+            <p id="up_nxt">Up Next</p>
+            <p id="autoplay" class ="actions">Autoplay</p>
+          </section>
+          <section id=nxt_vid>
+            <img id="nxt_thumbnail" src="images/nxt thumb.png" alt="nxt video thumb">
+            <p id="vid_title">Eminem - The Real Slim Shady (Official Video - Clean Version)</p>
+            <p id="vid_artist_name">Eminem Music</p>
+            <p id="nxt_vid_views">420M Views</p>
+          </section>
+          <section id=vid_mix>
+              <img id="mix_thumbnail" src="images/mix thumb.png" alt="mix video thumb">
+              <p id="mix_title">Mix - Eminem - Without me</p>
+              <p id="mix_artist_name">YouTube</p>
+          </section>
+          <section id=nxt_vid>
+              <img id="first_vid_thumbnail" src="images/first thumb.png" alt="first video thumb">
+              <p id="first_first_vid_title">Dr Dre ft. Snoop Dog - Still D.R.E. (Official Video)- Clean Version)</p>
+              <p id="first_vid_artist_name">Dr D.R.E.</p>
+              <p id="first_vid_views">684M Views</p>
+          </section>
+
 
         </aside>
     </body>
