--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <meta charset="UTF-8">
+      <link rel = "stylesheet" type = "text/css" href="style.css"/>
       <title>
         Youtube homepage
       </title>
     </head>
-
     <body>
       <header>
           <nav>
               <img  id="logo" src="images/logo.png">
-              <input type="search">
-              <button>Search</button> 
+              <section>
+                <input type="search">
+                <button>Search</button> 
+              </section>
               <button>Upload</button>
               <button>Sign In</button>
           </nav>
@@ -91,8 +94,6 @@
               <p id="first_vid_artist_name">Dr D.R.E.</p>
               <p id="first_vid_views">684M Views</p>
           </section>
-
-
         </aside>
     </body>
 </html>
