Grouped buttons in the nav bar and corrected search box width to flex

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
       <header>
           <nav>
               <img  id="logo" src="images/logo.png">
-              <section>
-                <input type="search">
-                <button>Search</button> 
+              <section id =searchbar>
+                <input type="search" placeholder="Search">
+                <button class="buttons">Search</button> 
               </section>
-              <button>Upload</button>
-              <button>Sign In</button>
+              <section id="nav_buttons">
+                <button class="buttons">Upload</button>
+                <button class="buttons">Sign In</button>
+              </section>
           </nav>
         </header>
         <section id="video">
