Arranged Main Video and Related videos sections

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <nav>
               <img  id="logo" src="images/logo.png">
               <section id =searchbar>
-                <input type="search" placeholder="Search">
+                <input type="search" placeholder="Search" q=>
                 <button class="buttons">Search</button> 
               </section>
               <section id="nav_buttons">
@@ -20,27 +20,28 @@
                 <button class="buttons">Sign In</button>
               </section>
           </nav>
-        </header>
-        <section id="page_layout">
-          <section id="video">
-              <iframe src="https://www.youtube.com/embed/YVkUvmDQ3HY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              <p id="video_name">Eminem - Without me</p>
-              <section>
-                <p id="views">842,988,927 views</p>
-                <img id="thumbs_up" class="thumbs" src="images/thumbs_up.jpg">
-                <img id="thumbs_down" class="thumbs" src="images/thumbs_down.jpg">
-              </section>
-              <section id="artist_detail">
-                <img id ="artist_avatar" src ="images/avatar.jpg">
-                <p id ="artist_name">Eminem Music</p>
-                <p id ="suscribers">39.8M suscribers</p>
-                <p id="detail_info">
-                  iTunes: <a href ="http://smarturl.it/WithoutMe" target="blank"> http://smarturl.it/WithoutMe </a>  <br>
-                  Amazon: <a href ="http://smarturl.it/WithoutMeAmz" target="blank"> http://smarturl.it/WithoutMeAmz</a> <br>
-                  Google Play: <a href ="http://smarturl.it/WithoutMeGP" target="blank">http://smarturl.it/WithoutMeGP</a> <br> 
-                </p>
-                <p id="show_more" class="actions" >SHOW MORE</p>
+      </header>
+      <section id="page_layout">
+        <section id="video">
+            <iframe src="https://www.youtube.com/embed/YVkUvmDQ3HY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p id="video_name">Eminem - Without me</p>
+            <section>
+              <p id="views">842,988,927 views</p>
+              <img id="thumbs_up" class="thumbs" src="images/thumbs_up.jpg">
+              <img id="thumbs_down" class="thumbs" src="images/thumbs_down.jpg">
             </section>
+            <section id="artist_detail">
+              <img id ="artist_avatar" src ="images/avatar.jpg">
+              <p id ="artist_name">Eminem Music</p>
+              <p id ="suscribers">39.8M suscribers</p>
+              <p id="detail_info">
+                iTunes: <a href ="http://smarturl.it/WithoutMe" target="blank"> http://smarturl.it/WithoutMe </a>  <br>
+                Amazon: <a href ="http://smarturl.it/WithoutMeAmz" target="blank"> http://smarturl.it/WithoutMeAmz</a> <br>
+                Google Play: <a href ="http://smarturl.it/WithoutMeGP" target="blank">http://smarturl.it/WithoutMeGP</a> <br> 
+              </p>
+              <p id="show_more" class="actions" >SHOW MORE</p>
+            </section>
+
           </section>
           <aside class="recom">
             <section id = " ad_banner">
@@ -68,37 +69,37 @@
                 <p id="first_vid_views">684M Views</p>
             </section>
           </aside>
+        </section>
+        <section id="comments">
           <section>
-            <section>
-              <p id="comments_number">200,917 Comments</p>
-              <p class="actions">Sort by</p>
-              <img id="user_avatar" class="avatar" src="images/user_avatar.png">
-              <input type="text">
-              <button id="comment_cancel">Cancel</button>
-            <button id="comment_comment">Comment</button>
+            <p id="comments_number">200,917 Comments</p>
+            <p class="actions">Sort by</p>
+            <img id="user_avatar" class="avatar" src="images/user_avatar.png">
+            <input type="text">
+            <button id="comment_cancel">Cancel</button>
+          <button id="comment_comment">Comment</button>
+        </section>
+          <section id="first_comment" class="people_comm">
+            <img id="comment_1_img" class="avatar" src="images/comment_1.jpg">
+            <p id="comment_1_name">Poizins</p>
+            <p id="comment_1_date">3 months ago</p>
+            <p id="comment_1_comm">No one will ever know how this got 10k likes</p>
+            <img id="thumbs_up_comm1" class="thumbs" src="images/thumbs_up.jpg">
+            <p id="comment_1_likes">16,716</p>
+            <img id="thumbs_down_comm1" class="thumbs" src="images/thumbs_down.jpg">
+            <p id="comment_1_reply">REPLY</p>
+            <p id="comment_1_replies">See 188 replies</p>
           </section>
-            <section id="first_comment" class="people_comm">
-              <img id="comment_1_img" class="avatar" src="images/comment_1.jpg">
-              <p id="comment_1_name">Poizins</p>
-              <p id="comment_1_date">3 months ago</p>
-              <p id="comment_1_comm">No one will ever know how this got 10k likes</p>
-              <img id="thumbs_up_comm1" class="thumbs" src="images/thumbs_up.jpg">
-              <p id="comment_1_likes">16,716</p>
-              <img id="thumbs_down_comm1" class="thumbs" src="images/thumbs_down.jpg">
-              <p id="comment_1_reply">REPLY</p>
-              <p id="comment_1_replies">See 188 replies</p>
-            </section>
-            <section id="second_comment" class="people_comm">
-              <img id="comment_2_img" class="avatar" src="images/comment_2.jpg">
-              <p id="comment_2_name">Salim Zighe</p>
-              <p id="comment_2_date">2 days ago</p>
-              <p id="comment_2_comm">The only other rapper that's better than eminem is definitely slim shady</p>
-              <img id="thumbs_up_comm2" class="thumbs" src="images/thumbs_up.jpg">
-              <p id="comment_2_likes">64</p>
-              <img id="thumbs_down_comm2" class="thumbs" src="images/thumbs_down.jpg">
-              <p id="comment_2_reply">REPLY</p>
-              <p id="comment_2_replies">See 3 replies</p>
-            </section>
+          <section id="second_comment" class="people_comm">
+            <img id="comment_2_img" class="avatar" src="images/comment_2.jpg">
+            <p id="comment_2_name">Salim Zighe</p>
+            <p id="comment_2_date">2 days ago</p>
+            <p id="comment_2_comm">The only other rapper that's better than eminem is definitely slim shady</p>
+            <img id="thumbs_up_comm2" class="thumbs" src="images/thumbs_up.jpg">
+            <p id="comment_2_likes">64</p>
+            <img id="thumbs_down_comm2" class="thumbs" src="images/thumbs_down.jpg">
+            <p id="comment_2_reply">REPLY</p>
+            <p id="comment_2_replies">See 3 replies</p>
           </section>
         </section>
     </body>
