Arranged the main video and artist sections

--- a/index.html
+++ b/index.html
@@ -25,15 +25,19 @@
         <section id="video">
             <iframe src="https://www.youtube.com/embed/YVkUvmDQ3HY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p id="video_name">Eminem - Without me</p>
-            <section>
+            <section id="views_thumbs">
               <p id="views">842,988,927 views</p>
-              <img id="thumbs_up" class="thumbs" src="images/thumbs_up.jpg">
-              <img id="thumbs_down" class="thumbs" src="images/thumbs_down.jpg">
+              <div>
+                <img id="thumbs_up" class="thumbs" src="images/thumbs_up.jpg">
+                <img id="thumbs_down" class="thumbs" src="images/thumbs_down.jpg">
+              </div>
             </section>
             <section id="artist_detail">
-              <img id ="artist_avatar" src ="images/avatar.jpg">
-              <p id ="artist_name">Eminem Music</p>
-              <p id ="suscribers">39.8M suscribers</p>
+              <div>
+                <img id ="artist_avatar" src ="images/avatar.jpg" class="avatar">
+                <p><b>Eminem Music</b><br>
+                   39.8M suscribers</p>
+              </div>
               <p id="detail_info">
                 iTunes: <a href ="http://smarturl.it/WithoutMe" target="blank"> http://smarturl.it/WithoutMe </a>  <br>
                 Amazon: <a href ="http://smarturl.it/WithoutMeAmz" target="blank"> http://smarturl.it/WithoutMeAmz</a> <br>
@@ -53,18 +57,18 @@
             </section>
             <section class="as_vid" id="nxt_vid">
               <img id="nxt_thumbnail" src="images/nxt thumb.png" alt="nxt video thumb">
-              <p id="vid_title">Eminem - The Real Slim Shady (Official Video - Clean Version)<br>
+              <p id="vid_title"><b>Eminem - The Real Slim Shady (Official Video - Clean Version)</b><br>
               Eminem Music <br>
               420M Views</p>
             </section>
             <section class="as_vid" id=vid_mix>
                 <img id="mix_thumbnail" src="images/mix thumb.png" alt="mix video thumb">
-                <p id="mix_title">Mix - Eminem - Without me <br>
+                <p id="mix_title"><b>Mix - Eminem - Without me</b><br>
                 YouTube</p>
             </section>
             <section class="as_vid" id="first_vid">
                 <img id="first_vid_thumbnail" src="images/first thumb.png" alt="first video thumb">
-                <p id="first_first_vid_title">Dr Dre ft. Snoop Dog - Still D.R.E. (Official Video)- Clean Version)<br>
+                <p id="first_first_vid_title"><b>Dr Dre ft. Snoop Dog - Still D.R.E. (Official Video)- Clean Version)</b><br>
                 Dr D.R.E.<br>
                 684M Views</p>
             </section>
