fixed and align the comment section of the video

--- a/index.html
+++ b/index.html
@@ -75,35 +75,47 @@
           </aside>
         </section>
         <section id="comments">
-          <section>
-            <p id="comments_number">200,917 Comments</p>
-            <p class="actions">Sort by</p>
-            <img id="user_avatar" class="avatar" src="images/user_avatar.png">
-            <input type="text">
-            <button id="comment_cancel">Cancel</button>
-          <button id="comment_comment">Comment</button>
+          <section id="user_avatar_s">
+            <div>
+              <p id="comments_number">200,917 Comments</p>
+              <p class="actions">Sort by</p>
+            </div>
+            <div id="user_input">
+              <img id="user_avatar" class="avatar" src="images/user_avatar.png">
+              <section>
+                <input type="text">
+                <button id="comment_cancel">Cancel</button>
+                <button id="comment_comment">Comment</button>
+              </section>
+            </div>
         </section>
           <section id="first_comment" class="people_comm">
-            <img id="comment_1_img" class="avatar" src="images/comment_1.jpg">
-            <p id="comment_1_name">Poizins</p>
-            <p id="comment_1_date">3 months ago</p>
-            <p id="comment_1_comm">No one will ever know how this got 10k likes</p>
-            <img id="thumbs_up_comm1" class="thumbs" src="images/thumbs_up.jpg">
-            <p id="comment_1_likes">16,716</p>
-            <img id="thumbs_down_comm1" class="thumbs" src="images/thumbs_down.jpg">
-            <p id="comment_1_reply">REPLY</p>
-            <p id="comment_1_replies">See 188 replies</p>
+            <div class="comm">
+              <img id="comment_1_img" class="avatar" src="images/comment_1.jpg">
+              <p id="comment_1_name">Poizins <span class="months">3 months ago</span><br>
+              No one will ever know how this got 10k likes</p>
+            </div>  
+            <div class="like">
+              <img id="thumbs_up_comm1" class="thumbs" src="images/thumbs_up.jpg">
+              <p id="comment_1_likes">16,716</p>
+              <img id="thumbs_down_comm1" class="thumbs" src="images/thumbs_down.jpg">
+              <p class="comment_1_reply" class="actions">REPLY</p>
+            </div>
+            <p class="comment_1_replies">See 188 replies</p>
           </section>
           <section id="second_comment" class="people_comm">
-            <img id="comment_2_img" class="avatar" src="images/comment_2.jpg">
-            <p id="comment_2_name">Salim Zighe</p>
-            <p id="comment_2_date">2 days ago</p>
-            <p id="comment_2_comm">The only other rapper that's better than eminem is definitely slim shady</p>
-            <img id="thumbs_up_comm2" class="thumbs" src="images/thumbs_up.jpg">
-            <p id="comment_2_likes">64</p>
-            <img id="thumbs_down_comm2" class="thumbs" src="images/thumbs_down.jpg">
-            <p id="comment_2_reply">REPLY</p>
-            <p id="comment_2_replies">See 3 replies</p>
+            <div class="comm">
+              <img id="comment_2_img" class="avatar" src="images/comment_2.jpg">
+              <p id="comment_2_name">Salim Zighe <span class="months">2 days ago</span><br>
+              The only other rapper that's better than eminem is definitely slim shady</p>
+            </div>
+            <div class="like">
+              <img id="thumbs_up_comm2" class="thumbs" src="images/thumbs_up.jpg">
+              <p id="comment_2_likes">64</p>
+              <img id="thumbs_down_comm2" class="thumbs" src="images/thumbs_down.jpg">
+              <p id="comment_2_reply" class="actions">REPLY</p>
+            </div>
+            <p class="comment_1_replies">See 3 replies</p>
           </section>
         </section>
     </body>
