fixed buttons in the nav bar and in the description video section

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
               <img  id="logo" src="images/logo.png" alt="youtubelogo">
               <section id =searchbar>
                 <input type="search" placeholder="Search">
-                <button class="buttons">Search</button> 
+                <button class="buttons"><img src="images/mag_glass.png" class="emb" alt="mag_glass"></button>
               </section>
               <section id="nav_buttons">
-                <button class="buttons">Upload</button>
-                <button class="buttons">Sign In</button>
+                <button class="buttons"><img src="images/upload.png" class="emb" alt="upload_logo"></button>
+                <button class="buttons"><img src="images/sign.png" class="emb" alt="sign_in_logo"></button>
+                <button class="buttons"><img src="images/notifications.png" id="not" class="emb" alt="notifications"></button>
               </section>
           </nav>
       </header>
@@ -30,6 +31,7 @@
               <div>
                 <img id="thumbs_up" class="thumbs" src="images/thumbs_up.jpg" alt="thumbsup">
                 <img id="thumbs_down" class="thumbs" src="images/thumbs_down.jpg" alt="thumbsdown">
+                <button id="share" class="vid_butt"><img src="images/share.png" alt="share" class="emb"></button>
               </div>
             </section>
             <section id="artist_detail">
@@ -37,6 +39,7 @@
                 <img id ="artist_avatar" src ="images/avatar.jpg" class="avatar" alt="eminem">
                 <p><b>Eminem Music</b><br>
                    39.8M suscribers</p>
+                  <button id="subs" class="vid_butt"><img src="images/subscribe.png" alt="subscribe" class="emb"> Subscribe</button>
               </div>
               <p id="detail_info">
                 iTunes: <a href ="http://smarturl.it/WithoutMe" target="blank"> http://smarturl.it/WithoutMe </a>  <br>
